Adding names Portfolio Part

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 									<li>
 										<figure>
 											<figcaption>
-											<h3>Project #1 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+											<h3>Te<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p>
 											</figcaption>
 											<img src="images/te.jpg" alt="Te">
@@ -305,7 +305,7 @@
 									<li>
 										<figure>
 											<figcaption>
-											<h3>Project #2 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+											<h3>Frida Kahlo<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 											</figcaption>
 											<img src="images/frida.jpg" alt="Frida">
@@ -314,7 +314,7 @@
 									<li>
 										<figure>
 										<figcaption>
-													<h3>Project #3 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>La Vid Church <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="images/vid.jpg" alt="LaVid">
@@ -323,7 +323,7 @@
 										<li>
 											<figure>
 												<figcaption>
-												<h3>Project #4 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+												<h3>Frozen Posters <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 												<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="images/frozen.jpg" alt="Frozen">
@@ -332,7 +332,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Project #5 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>Pet Circus <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="images/pet.jpg" alt="PetCircus">
@@ -341,7 +341,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Project #6 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>WittyLock <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="images/wittylock.jpg" alt="Wittylock">
