--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 	<link rel="stylesheet" href="css/skel.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/style-xlarge.css">
+	
+	<link rel="shortcut icon" href="favicon.ico">
 		
 	<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> <!-- Extra Portfolio Pieces -->
 	<script src="js/modernizr.custom.js"></script> 	<!-- General -->
