Added color class (portfolio titles)

--- a/index.html
+++ b/index.html
@@ -245,51 +245,51 @@
 									<li>
 										<figure>
 											<img src="images/te.jpg" alt="Tea">
-											<figcaption><h4>TE</h4><p>Self-Esteem Tea Campaign. Beauty is subjective!</p></figcaption>
+											<figcaption><h4 class="color">TE</h4><p>Self-Esteem Tea Campaign. Beauty is subjective!</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="images/frida.jpg"  alt="Frida">
-											<figcaption><h4>Frida Kahlo</h4><p>Mexican Painter <br>
+											<figcaption><h4 class="color">Frida Kahlo</h4><p>Mexican Painter <br>
 											Chocolate label. Pablo Lobato style.</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="images/vid.jpg"  alt="LaVid">
-											<figcaption><h4>La Vid Church</h4><p>Branding <br>
+											<figcaption><h4 class="color">La Vid Church</h4><p>Branding <br>
 											Based on John 15:5</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="images/frozen.jpg"  alt="Frozen">
-											<figcaption><h4>Frozen Posters</h4><p>Print Evagelism Chocolates</p></figcaption>
+											<figcaption><h4 class="color">Frozen Posters</h4><p>Print Evagelism Chocolates</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="images/pet.jpg"  alt="PetCircus">
-											<figcaption><h4>Pet Circus</h4><p>Branding, Print & Stationary.</p></figcaption>
+											<figcaption><h4 class="color">Pet Circus</h4><p>Branding, Print & Stationary.</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="images/wittylock.jpg"  alt="App">
-											<figcaption><h4>WittyLock</h4><p>Simple utility app using Apple's iOS UIKit.</p></figcaption>
+											<figcaption><h4 class="color">WittyLock</h4><p>Simple utility app using Apple's iOS UIKit.</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="images/izze.jpg"  alt="Dulce-Amor">
-											<figcaption><h4>Izze Campaign</h4><p>Youthful and Minimalist. Be Natural Be You!</p></figcaption>
+											<figcaption><h4 class="color">Izze Campaign</h4><p>Youthful and Minimalist. Be Natural Be You!</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="images/solei.jpg"  alt="Solei">
-											<figcaption><h4>Cirque du Soleil</h4><p>Annual Report.</p></figcaption>
+											<figcaption><h4 class="color">Cirque du Soleil</h4><p>Annual Report.</p></figcaption>
 										</figure>
 									</li>
 									</ul>
@@ -299,7 +299,7 @@
 									<li>
 										<figure>
 											<figcaption>
-											<h3>Te<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+											<h3 class="color">Te<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>This campaign is not only for selling tea but also to create awareness addressed to women (young-adult) who have self-esteem issues. In this campaign uses Spanish & English languages. TE means tea and the hook phrases are: AMATE (love yourself), REGALATE (give yourself) and CUIDATE (take care yourself). Remember beauty is subjective.</p>
 											</figcaption>
 											<img src="images/te.jpg" alt="Te">
@@ -309,7 +309,7 @@
 									<li>
 										<figure>
 											<figcaption>
-											<h3>Frida Kahlo<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+											<h3 class="color">Frida Kahlo<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>The main imagery was inspired by Pablo Lobato style. The foundation of this particular style is the use of gestalt principles (proximity, similarity, closure and symmetry). The protagonist for this special chocolate edition is Frida Kahlo, a mexican painter. She was recognized by her united eyebrow and big hairstyle with lots of flowers in her hair. Kahlo's work is remembered for its pain. passion, intense, and vibrant colours.</p>
 											</figcaption>
 											<img src="images/frida.jpg" alt="Frida">
@@ -318,7 +318,7 @@
 									<li>
 										<figure>
 										<figcaption>
-													<h3>La Vid Church <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3 class="color">La Vid Church <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>The vision for this Church was based on John 15:5 that talks about that Jesus is the vine, and the members of the Church are the branches. And if you remain in him you will bear much fruit. These three concepts are described in my logo. The “V” for La Vid (Spanish word which means “Vine”) is both cross (Jesus) and branch (Church) that bears fruit (Grapes).</p>
 												</figcaption>
 												<img src="images/vid.jpg" alt="LaVid">
@@ -336,7 +336,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Pet Circus <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3 class="color">Pet Circus <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Pet Circus is downtown Ottawa’s most complete pet store. This logo incorporates both concepts of the name. To represent the circus I used the iconic tent and the circle of the letter “i” (circus word) is the clown’s nose of the bird. Also, you can find other pets silhouettes like dog, rabbit and lizard.</p>
 												</figcaption>
 												<img src="images/pet.jpg" alt="PetCircus">
@@ -345,7 +345,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>WittyLock <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3 class="color">WittyLock <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Parents can easily lock and unlock their child’s devices for Study Time, Meals Time or/and Bed Time (everything from apps to the Internet to texting and calling friends is temporarily disabled), no matter where they are. WittyLock is simple to use even for inexperienced users. Not more struggles for the parents!</p>
 												</figcaption>
 												<img src="images/wittylock.jpg" alt="Wittylock">
@@ -354,7 +354,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Izze Campaign <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3 class="color">Izze Campaign <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>My creative concept is all-natural. My models have different personalities that are on target. I asked them to cover their left eye with a fruit. But, allow them to do whatever they want and be free to express themselves in front of the camera.  Each model represents one flavour: lemon, clementine and pomegranate.</p>
 												</figcaption>
 												<img src="images/izze.jpg" alt="Izze">
@@ -363,7 +363,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Cirque du Soleil <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3 class="color">Cirque du Soleil <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Based on the logo’s company I took the basic geometric shapes like circles and triangles to create two different layouts design. Although their differences, they complement each other and the design flows entirely through all pages. Since is a report I used Infographics to make it more appealing and easy to read.</p>
 												</figcaption>
 												<img src="images/solei.jpg" alt="Solei">
