Adding coding to my 404 page
Spelling correction

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<h2>About Me</h2>
 								<p>My name is Thalia Bacilio and these are some facts that I want you to know about me. I’m a junior graphic design<sup>1</sup>
 					  <a class="tooltip"><i class="fa fa-pencil"></i><span class="tooltip-content">Which means I found my passion in my professional life.</span></a> 
-					 in Ottawa, Ontario, Canada. For me design is problem solving in a visual way, which the two main elements are the aesthetics<sup>2</sup><a class="tooltip"><i class="fa fa-users"></i><span class="tooltip-content">That wow factor that stands up from others.</span></a> and purpose.<sup>3</sup><a class="tooltip"><i class="fa fa-thumbs-up"></i><span class="tooltip-content">If it is not functional, it is not worthy.</span></a> Something that I really enjoy is create and express myself through illustrations<sup>4</sup><a class="tooltip"><i class="fa fa-star"></i><span class="tooltip-content">Definitely, 100% my style. Thanks God for Adobe Illustrator!</span></a> is like a vibrant, childish, surrealism dreamworld. I believe that LOVE<sup>5</sup><a class="tooltip"><i class="fa fa-heart"></i><span class="tooltip-content">Jesus is love. 1 John 4:16.</span></a> is my air and food of each day inspiring me to always give my 100% in everything I do. Did you know that also I have International<sup>6</sup><a class="tooltip"><i class="fa fa-plane"></i><span class="tooltip-content">Mexico, El Salvador and coming soon Spain.</span></a> Experience? It is great to be part of a different culture getting involve with their customs and being inspire with their design trends. As a curiosities, I literally captivated by cupcakes,<sup>7</sup><a class="tooltip"><i class="fa fa-comment"></i><span class="tooltip-content">One day, I will have my own cupcake store and do all the branding for it.</span></a> creative packaging, food and I was named after a famous Mexican singer.<sup>8</sup><a class="tooltip"><i class="fa fa-microphone"></i><span class="tooltip-content">My dad’s crush since his youth.</span></a></p> 
+					 in Ottawa, Ontario, Canada. For me, design is problem solving in a visual way; the two main elements are the aesthetics<sup>2</sup><a class="tooltip"><i class="fa fa-users"></i><span class="tooltip-content">That wow factor that stands up from others.</span></a> and purpose.<sup>3</sup><a class="tooltip"><i class="fa fa-thumbs-up"></i><span class="tooltip-content">If it is not functional, it is not worthy.</span></a> Something that I really enjoy to create and express myself through illustrations,<sup>4</sup><a class="tooltip"><i class="fa fa-star"></i><span class="tooltip-content">Definitely, 100% my style. Thank God for Adobe Illustrator!</span></a>it is like a vibrant, childish, surrealism dreamworld. I believe that LOVE<sup>5</sup><a class="tooltip"><i class="fa fa-heart"></i><span class="tooltip-content">Jesus is love. 1 John 4:16.</span></a> is my air and food of each day inspiring me to always give my 100% in everything I do. Did you know that I also have International<sup>6</sup><a class="tooltip"><i class="fa fa-plane"></i><span class="tooltip-content">Mexico, El Salvador and coming soon Spain.</span></a> Experience? It is great to be part of a different culture, getting involve with their customs and being inspire with their design trends. As a curiosities, I am literally captivated by cupcakes,<sup>7</sup><a class="tooltip"><i class="fa fa-comment"></i><span class="tooltip-content">One day, I will have my own cupcake store and do all the branding for it.</span></a> creative packaging, food and I was named after a famous Mexican singer.<sup>8</sup><a class="tooltip"><i class="fa fa-microphone"></i><span class="tooltip-content">My dad’s crush since his youth.</span></a></p> 
 					 
 					 			<ol class="footnotes">
 									<li>Which means I found my passion in my professional life.</li>
@@ -191,7 +191,7 @@
 										<div><img src="images/print.jpg" alt="Print Logo"></div>
 										<div class="inner">
 											<h4>Print Roots</h4>
-											<p>Providing you all the printed materias that you need to leave your clients amazed.</p>
+											<p>Providing you all the printed materials that you need to leave your clients amazed.</p>
 										</div>
 									</article>
 									<article>
@@ -205,7 +205,7 @@
 										<div><img src="images/web.jpg" alt="Web Logo"></div>
 										<div class="inner">
 											<h4>WebU2-ix</h4>
-											<p>Creating a responsive and user experience websites with a touch of simplicity and clarity.</p>
+											<p>Creating a responsive and user-friendly experience websites with a touch of simplicity and clarity.</p>
 										</div>
 									</article>
 									<article>
@@ -300,7 +300,7 @@
 										<figure>
 											<figcaption>
 											<h3 class="color">Te<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
-											<p>This campaign is not only for selling tea but also to create awareness addressed to women (young-adult) who have self-esteem issues. In this campaign uses Spanish & English languages. TE means tea and the hook phrases are: AMATE (love yourself), REGALATE (give yourself) and CUIDATE (take care yourself). Remember beauty is subjective.</p>
+											<p>This campaign is not only to sell tea but also to create awareness and addressed to women (young-adult) who have self-esteem issues. This campaign uses Spanish & English languages. TE means tea and the hook phrases are: AMATE (love yourself), REGALATE (give yourself) and CUIDATE (take care yourself). Remember beauty is subjective.</p>
 											</figcaption>
 											<img src="images/te.jpg" alt="Te">
 									
@@ -310,7 +310,7 @@
 										<figure>
 											<figcaption>
 											<h3 class="color">Frida Kahlo<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
-											<p>The main imagery was inspired by Pablo Lobato style. The foundation of this particular style is the use of gestalt principles (proximity, similarity, closure and symmetry). The protagonist for this special chocolate edition is Frida Kahlo, a mexican painter. She was recognized by her united eyebrow and big hairstyle with lots of flowers in her hair. Kahlo's work is remembered for its pain. passion, intense, and vibrant colours.</p>
+											<p>The main imagery was inspired by Pablo Lobato style. The foundation of this particular style is the use of gestalt principles (proximity, similarity, closure and symmetry). The protagonist for this special chocolate edition is Frida Kahlo, a Mexican painter. She was recognized by her united eyebrow and big hairstyle with lots of flowers in her hair. Kahlo's work is remembered for its pain. passion, intense, and vibrant colours.</p>
 											</figcaption>
 											<img src="images/frida.jpg" alt="Frida">
 										</figure>
@@ -319,7 +319,7 @@
 										<figure>
 										<figcaption>
 													<h3 class="color">La Vid Church <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
-													<p>The vision for this Church was based on John 15:5 that talks about that Jesus is the vine, and the members of the Church are the branches. And if you remain in him you will bear much fruit. These three concepts are described in my logo. The “V” for La Vid (Spanish word which means “Vine”) is both cross (Jesus) and branch (Church) that bears fruit (Grapes).</p>
+													<p>The vision for this Church was based on John 15:5 that talks about that Jesus is the vine, and the members of the Church are the branches. And if you remain in him you will bear much fruit. These three concepts are described in my logo. The cross (Jesus), the branch (Church) and the fruit (Grapes). The “V” for La Vid (Spanish word which means “Vine”).</p>
 												</figcaption>
 												<img src="images/vid.jpg" alt="LaVid">
 											</figure>
@@ -328,7 +328,7 @@
 											<figure>
 												<figcaption>
 												<h3>Frozen<a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
-												<p>Nowadays, Frozen is very popular among kids even adults are captivated by this amazing Disney movie. For these reason, I decided to create iconic posters of each character. I chose the main feature that resembles them and their colour palette. This design is very clean and can hang up at your walls.</p>
+												<p>Nowadays, Frozen is very popular among kids, even adults are captivated by this amazing Disney movie. For this reason, I decided to create iconic posters of each character. I chose the main feature that resembles them and their colour palette. This design is very clean and can be hanged up on your walls.</p>
 												</figcaption>
 												<img src="images/frozen.jpg" alt="Frozen">
 											</figure>
@@ -337,7 +337,7 @@
 											<figure>
 												<figcaption>
 													<h3 class="color">Pet Circus <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
-													<p>Pet Circus is downtown Ottawa’s most complete pet store. This logo incorporates both concepts of the name. To represent the circus I used the iconic tent and the circle of the letter “i” (circus word) is the clown’s nose of the bird. Also, you can find other pets silhouettes like dog, rabbit and lizard.</p>
+													<p>Pet Circus is downtown Ottawa’s most complete pet store. This logo incorporates both concepts of the name. To represent the circus I used the iconic tent and the circle of the letter “i” (circus word) is the clown-like nose of the bird. Also, you can find other pets silhouettes like dog, rabbit and lizard.</p>
 												</figcaption>
 												<img src="images/pet.jpg" alt="PetCircus">
 											</figure>
@@ -355,7 +355,7 @@
 											<figure>
 												<figcaption>
 													<h3 class="color">Izze Campaign <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
-													<p>My creative concept is all-natural. My models have different personalities that are on target. I asked them to cover their left eye with a fruit. But, allow them to do whatever they want and be free to express themselves in front of the camera.  Each model represents one flavour: lemon, clementine and pomegranate.</p>
+													<p>My creative concept is all-natural. My models have different personalities that resemble the target market. I asked them to cover their left eye with a fruit. But, I allowed them to do whatever they wanted and to be free to express themselves in front of the camera. Each model represents one flavour: lemon, clementine and pomegranate.</p>
 												</figcaption>
 												<img src="images/izze.jpg" alt="Izze">
 											</figure>
@@ -364,7 +364,7 @@
 											<figure>
 												<figcaption>
 													<h3 class="color">Cirque du Soleil <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
-													<p>Based on the logo’s company I took the basic geometric shapes like circles and triangles to create two different layouts design. Although their differences, they complement each other and the design flows entirely through all pages. Since is a report I used Infographics to make it more appealing and easy to read.</p>
+													<p>Based on the company's logo I took the basic geometric shapes like circles and triangles to create two different layout designs. Despite their differences, they complement each other and the design flows entirely through all pages. Since it is a report, I used Infographics to make it more appealing and easy to read.</p>
 												</figcaption>
 												<img src="images/solei.jpg" alt="Solei">
 											</figure>
