--- a/404.html
+++ b/404.html
@@ -3,11 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Page Not Found</title>
+<link rel="stylesheet" href="css/404.css">
 </head>
 
 <body>
-
-	<h1>404 Error - Page Not Found </h1>
+	
+	<div class="error-page-wrap">
+		<article class="error-page gradient">
+			<hgroup>
+				<h1>404</h1>
+				<h2>Oops! page not found</h2>
+			</hgroup>
+			<a href="http://thaliadesign.info/" title="Back to site" class="error-back">Home</a>
+		</article>
+	</div>
+	
 	
 </body>
 </html>
