Linked my videos

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 												<div class="ch-info-front ch-img-1"></div>
 												<div class="ch-info-back">
 													<h3>Broadcast Package</h3>
-													<p>by Thalia <a href="">View on Vimeo</a></p>
+													<p>by Thalia <a href="https://vimeo.com/110666030">View on Vimeo</a></p>
 												</div>	
 											</div>
 										</div>
@@ -404,7 +404,7 @@
 												<div class="ch-info-front ch-img-2"></div>
 												<div class="ch-info-back">
 													<h3>Sequence Square</h3>
-													<p>by Thalia <a href="3">View on Vimeo</a></p>
+													<p>by Thalia <a href="https://vimeo.com/107506852">View on Vimeo</a></p>
 												</div>
 											</div>
 										</div>
