--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property= "og:site_name" content="Thalia Portfolio-Artwork">
 	<meta property= "og:description" content="Portfolio of Thalia, Original Graphic Designer at Ottawa, Canada">
 	<!-- Can have up to 5 images -->
-	<meta property= "og:image" content="">
+	<meta property= "og:image" content="images/about.jpg">
 	<meta property= "og:image" content="">
 	<meta property= "og:image" content="">
 	<meta property= "og:image" content="">
