--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 	<meta property= "og:site_name" content="Thalia Portfolio-Artwork">
 	<meta property= "og:description" content="Portfolio of Thalia, Original Graphic Designer at Ottawa, Canada">
 	<!-- Can have up to 5 images -->
-	<meta property= "og:image" content="images/about.jpg">
-	<meta property= "og:image" content="">
-	<meta property= "og:image" content="">
-	<meta property= "og:image" content="">
-	<meta property= "og:image" content="">
+	<meta property= "og:image" content="images/branding.jpg">
+	<meta property= "og:image" content="images/print.jpg">
+	<meta property= "og:image" content="images/app.jpg">
+	<meta property= "og:image" content="images/web.jpg">
+	<meta property= "og:image" content="images/motion.jpg">
 	<!-- Twitter meta tags -->
 	<meta name="twitter:card" content="gallery">
 	<meta name="twitter:title" content="">
 	<meta name="twitter:url" content="">
 	<meta name="twitter:description" content="">
-	<meta name="twitter:image0" content="">
-	<meta name="twitter:image1" content="">
-	<meta name="twitter:image2" content="">
-	<meta name="twitter:image3" content="">
+	<meta name="twitter:image0" content="images/branding.jpg">
+	<meta name="twitter:image1" content="images/print.jpg">
+	<meta name="twitter:image2" content="images/app.jpg">
+	<meta name="twitter:image3" content="images/web.jpg">
 		
 	
 	<link rel="stylesheet" href="css/skel.css">
