--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 												<div class="ch-info-front ch-img-3"></div>
 												<div class="ch-info-back">
 													<h3>Quick View</h3>
-													<p>by Thalia <a href="">View on Vimeo</a></p>
+													<p>by Thalia <a href="https://vimeo.com/114359491">View on Vimeo</a></p>
 												</div>
 											</div>
 										</div>
