feat(html): add portfolio pieces
third section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
 			<a href="" class="hvr-bounce-to-right"><img class="portfolio fade" src="img/witty.jpg" alt="WittyLock"></a>		
 		</section> 
 		
+		<section class="portfolio1-section">
+			<a href="" class="hvr-bounce-to-right"><img class="portfolio fade" src="img/little.jpg" alt="Little Felipe"></a>	
+			<a href="" class="hvr-bounce-to-right"><img class="portfolio fade" src="img/vid.jpg" alt="La Vid"></a>
+			<a href="" class="hvr-bounce-to-right"><img class="portfolio fade" src="img/frozen.jpg" alt="Frozen"></a>		
+		</section> 
+		
 		<ul class="ch-grid">
 					<li>
 						<div class="ch-item">				
